--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="user_name">username</string>
     <string name="password">password</string>
     <string name="enter">Enter</string>
+    <string name="Question">what`s this?</string>
+    <string name="MaxClientsNum">32</string>
 </resources>
